--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.2.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.8",
     "sharp": "^0.32.1",
     "web-vitals": "^2.1.4"
@@ -22,9 +22,6 @@
     "build": "next build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": ["./node_modules/standard/eslintrc.json"]
   },
   "browserslist": {
     "production": [
@@ -39,6 +36,13 @@
     ]
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.4.1",
+    "eslint": "^8.40.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
     "standard": "^17.0.0"
   }
 }
