--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
       },
     "extends": [
         "plugin:react/recommended",
+        "plugin:@next/next/recommended",
         "standard"
     ],
     "overrides": [
@@ -24,6 +25,7 @@
     ],
     "rules": {
         "react/react-in-jsx-scope": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "@next/next/no-html-link-for-pages": "off"
     }
 }
