--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "next": "^13.4.1",
+    "next": "^13.4.2",
     "react": "^18.1.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.2.1",
@@ -19,7 +19,7 @@
     "dev": "next",
     "lint": "eslint .",
     "start": "next start",
-    "build": "next build",
+    "build": "next build --output public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
